sfSandBoxCode/force-app/main/default/objects/Occurrence__c/Occurrence__c.object-meta.xml
<CustomObject>
    <description>Takes information on Accidents and Incidents that are related to the company</description>
    <label>Occurrence</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occurrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>