sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Actual_Location__c.field-meta.xml
<CustomField>
    <fullName>Actual_Location__c</fullName>
    <formula>IF( (ISPICKVAL(Location__c,&quot;Other&quot; ) || ISPICKVAL(Location__c,&quot;&quot; )), Other_Location__c,TEXT( Location__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Location</label>
    <type>Text</type>
</CustomField>