sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Actual_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Training_Date__c</fullName>
    <description>This is when the training actually started</description>
    <inlineHelpText>Click in the field and pick a date</inlineHelpText>
    <label>Actual Training Date</label>
    <type>Date</type>
</CustomField>