sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <type>TextArea</type>
</CustomField>