sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Corrective_Action_Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Closed_On__c</fullName>
    <description>The attempts made before the corrective action was satisfactory</description>
    <inlineHelpText>Click on the downward arrow and Pick a value from the list</inlineHelpText>
    <label>Corrective Action Closed On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Attempt</fullName>
            </value>
            <value>
                <fullName>Second Attempt</fullName>
            </value>
            <value>
                <fullName>Third Attempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>