sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Corrective_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Date__c</fullName>
    <description>The actual date corrective action was closed</description>
    <inlineHelpText>Click in the field and pick a date</inlineHelpText>
    <label>Corrective Action Implementation Date</label>
    <type>Date</type>
</CustomField>