sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Corrective_Action_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Implemented__c</fullName>
    <label>Corrective action implemented</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>