sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Corrective_action_rating__c.field-meta.xml
<CustomField>
    <fullName>Corrective_action_rating__c</fullName>
    <label>Corrective action rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Met Expectations</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>