sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>State briefly what happened</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>