sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/EHS_Justification__c.field-meta.xml
<CustomField>
    <fullName>EHS_Justification__c</fullName>
    <label>EHS Justification</label>
    <type>TextArea</type>
</CustomField>