sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Employee_Retraining_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Retraining_Date__c</fullName>
    <label>Employee Retraining Date</label>
    <type>Date</type>
</CustomField>