sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <description>Gives details of the occurrence</description>
    <inlineHelpText>Give details of the occurrence</inlineHelpText>
    <label>Full Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>