sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Immediate_action_taken__c.field-meta.xml
<CustomField>
    <fullName>Immediate_action_taken__c</fullName>
    <label>Immediate action taken</label>
    <type>TextArea</type>
</CustomField>