sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Injured_Employee__c.field-meta.xml
<CustomField>
    <fullName>Injured_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee&#39;s Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Occurrences</relationshipLabel>
    <relationshipName>Occurrences</relationshipName>
    <type>Lookup</type>
</CustomField>