sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Injured_in_line_of_duty__c.field-meta.xml
<CustomField>
    <fullName>Injured_in_line_of_duty__c</fullName>
    <label>Injury occurred directly in line of duty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>