sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Occurrences</relationshipLabel>
    <relationshipName>Occurrences</relationshipName>
    <type>Lookup</type>
</CustomField>