sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <formula>Sanergy_Department_Unit__r.Line_Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Manager</label>
    <type>Text</type>
</CustomField>