sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Line_Manager_SF_Account__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_SF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Manager SF Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Occurrences3</relationshipName>
    <type>Lookup</type>
</CustomField>