sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Name of Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kamukunji</fullName>
            </value>
            <value>
                <fullName>Kwa Ruben</fullName>
            </value>
            <value>
                <fullName>Kwa Njenga</fullName>
            </value>
            <value>
                <fullName>Kayaba</fullName>
            </value>
            <value>
                <fullName>Viwandani</fullName>
            </value>
            <value>
                <fullName>Muthurwa</fullName>
            </value>
            <value>
                <fullName>Makadara</fullName>
            </value>
            <value>
                <fullName>Kilimani</fullName>
            </value>
            <value>
                <fullName>Mathare</fullName>
            </value>
            <value>
                <fullName>Tassia</fullName>
            </value>
            <value>
                <fullName>Limuru</fullName>
            </value>
            <value>
                <fullName>Kinanie</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Mukuru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>