sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Nature_of_Person__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Person__c</fullName>
    <label>Status of Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>