sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Date__c</fullName>
    <label>Occurrence Date</label>
    <type>DateTime</type>
</CustomField>