sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Other_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Location__c</fullName>
    <inlineHelpText>Locations outside the organization’s operational areas or area not included on the Location drop down menu</inlineHelpText>
    <label>Other Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>