sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Possible_Impact__c.field-meta.xml
<CustomField>
    <fullName>Possible_Impact__c</fullName>
    <label>Possible Impact</label>
    <type>TextArea</type>
</CustomField>