sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Possible_incident_injuries__c.field-meta.xml
<CustomField>
    <fullName>Possible_incident_injuries__c</fullName>
    <label>Possible incident injuries</label>
    <type>TextArea</type>
</CustomField>