sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <label>Problem Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>