sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Proposed_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Corrective_Action__c</fullName>
    <inlineHelpText>Describe what could be done to avoid recurrence</inlineHelpText>
    <label>Proposed Corrective Action</label>
    <type>TextArea</type>
</CustomField>