sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Proposed_Corrective_action_end_date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Corrective_action_end_date__c</fullName>
    <label>Proposed corrective action end date</label>
    <type>Date</type>
</CustomField>