sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Proposed_Corrective_action_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Corrective_action_Start_Date__c</fullName>
    <description>The date the reporter will start to implement corrective action</description>
    <inlineHelpText>The date the reporter will start to implement corrective action</inlineHelpText>
    <label>Proposed Corrective action Start Date</label>
    <type>Date</type>
</CustomField>