sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/QHSE__c.field-meta.xml
<CustomField>
    <fullName>QHSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QHSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Occurrences</relationshipName>
    <type>Lookup</type>
</CustomField>