sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Retraining_Needed__c.field-meta.xml
<CustomField>
    <fullName>Retraining_Needed__c</fullName>
    <label>Retraining Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>