sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Root_cause__c.field-meta.xml
<CustomField>
    <fullName>Root_cause__c</fullName>
    <label>Root cause</label>
    <type>TextArea</type>
</CustomField>