sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Root_cause_analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_cause_analysis__c</fullName>
    <label>Root cause analysis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>