sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Sanergy_Department__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Team</inlineHelpText>
    <label>Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipLabel>Occurrences</relationshipLabel>
    <relationshipName>Occurrences</relationshipName>
    <type>Lookup</type>
</CustomField>