sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Sanergy_Department_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Start with team name e.g. Engineering operations - Logistics</inlineHelpText>
    <label>Department Unit</label>
    <referenceTo>Sanergy_Department_Unit__c</referenceTo>
    <relationshipLabel>Occurrences</relationshipLabel>
    <relationshipName>Occurrences</relationshipName>
    <type>Lookup</type>
</CustomField>