sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reported</fullName>
                <default>true</default>
                <label>Reported</label>
            </value>
            <value>
                <fullName>EHS Review</fullName>
            </value>
            <value>
                <fullName>Corrective Action</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>