sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <formula>Sanergy_Department__r.Team_Lead__r.Name</formula>
    <label>Team Lead</label>
    <type>Text</type>
</CustomField>