sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Training_Due_On__c.field-meta.xml
<CustomField>
    <fullName>Training_Due_On__c</fullName>
    <description>This is when the training should have been started.</description>
    <inlineHelpText>Click in the field and pick a date</inlineHelpText>
    <label>Training Due On</label>
    <type>Date</type>
</CustomField>