sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Type_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Accident__c</fullName>
    <inlineHelpText>First Aid - Internal First Aid Only
Safety - Internal First Aid &amp; Medical Check
Lost Work Day Accident - IFA, MC and sickoff excluding incident day
Serious Safety - Injuries involving fractures,major burns, unconsciousness
Fatal - Injured body found</inlineHelpText>
    <label>Type of Accident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Aid Accident</fullName>
            </value>
            <value>
                <fullName>Safety Accident</fullName>
            </value>
            <value>
                <fullName>Lost Work Days Accident</fullName>
            </value>
            <value>
                <fullName>Serious Safety Accident</fullName>
            </value>
            <value>
                <fullName>Fatal Accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>