sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Type_of_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Corrective_Action__c</fullName>
    <label>Type of Corrective Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Structural</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Process change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>