sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Type_of_incident__c.field-meta.xml
<CustomField>
    <fullName>Type_of_incident__c</fullName>
    <label>Type of incident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Environmental Incident</fullName>
            </value>
            <value>
                <fullName>Feed-stock: Foreign Objects</fullName>
            </value>
            <value>
                <fullName>Fire Incident</fullName>
            </value>
            <value>
                <fullName>General Incident</fullName>
            </value>
            <value>
                <fullName>Medical Incident</fullName>
            </value>
            <value>
                <fullName>Near Miss Incident</fullName>
            </value>
            <value>
                <fullName>Transport Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>