sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Type_of_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visitor__c</fullName>
    <label>Type of Visitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>