sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visitor</label>
    <type>Checkbox</type>
</CustomField>