sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Visitor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Visitor_s_Name__c</fullName>
    <label>Visitor/Casual&#39;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>