sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Why_1__c.field-meta.xml
<CustomField>
    <fullName>Why_1__c</fullName>
    <inlineHelpText>1st Why – The direct cause (problem statement)</inlineHelpText>
    <label>Why 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>