sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Why_2__c.field-meta.xml
<CustomField>
    <fullName>Why_2__c</fullName>
    <inlineHelpText>Enter the contributing factor</inlineHelpText>
    <label>Why 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>