sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Why_3__c.field-meta.xml
<CustomField>
    <fullName>Why_3__c</fullName>
    <inlineHelpText>The reason to the contributing factor</inlineHelpText>
    <label>Why 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>