sfSandBoxCode/force-app/main/default/objects/Occurrence__c/fields/Witness_Name__c.field-meta.xml
<CustomField>
    <fullName>Witness_Name__c</fullName>
    <label>Witness Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>