sfSandBoxCode/force-app/main/default/objects/Occurrence__c/recordTypes/Accident.recordType-meta.xml
<RecordType>
    <fullName>Accident</fullName>
    <active>true</active>
    <description>Accidents that happened in the occurrence</description>
    <label>Accident</label>
</RecordType>