sfSandBoxCode/force-app/main/default/objects/Occurrence__c/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <description>Incidents from the occurrence</description>
    <label>Incident</label>
</RecordType>