sfSandBoxCode/force-app/main/default/objects/Occurrence__c/recordTypes/Stock_Out_Case.recordType-meta.xml
<RecordType>
    <fullName>Stock_Out_Case</fullName>
    <active>true</active>
    <description>tracks any occurrences of inventory stock-outs</description>
    <label>Stock Out Case</label>
</RecordType>