sfSandBoxCode/force-app/main/default/objects/Occurrence__c/validationRules/EHS_Justification.validationRule-meta.xml
<ValidationRule>
    <fullName>EHS_Justification</fullName>
    <active>true</active>
    <description>Fill EHS justification if Root cause analysis is declined</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Root_cause_analysis__c , &quot;Other&quot;) , 
ISBLANK( EHS_Justification__c ))</errorConditionFormula>
    <errorDisplayField>EHS_Justification__c</errorDisplayField>
    <errorMessage>Please give a justification for declining the corrective action</errorMessage>
</ValidationRule>