sfSandBoxCode/force-app/main/default/objects/Occurrence__c/validationRules/Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
$RecordType.Name = &quot;Accident&quot;,
Visitor__c = False,
OR (
ISBLANK( Injured_Employee__c )))</errorConditionFormula>
    <errorDisplayField>Injured_Employee__c</errorDisplayField>
    <errorMessage>Kindly fill the field</errorMessage>
</ValidationRule>