sfSandBoxCode/force-app/main/default/objects/Occurrence__c/validationRules/Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Location</fullName>
    <active>true</active>
    <description>If location is not in the location picklist, fill Other</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  Location__c , &quot;Other&quot;) , 
ISBLANK(  Other_Location__c ))</errorConditionFormula>
    <errorDisplayField>Other_Location__c</errorDisplayField>
    <errorMessage>Please fill the Other location</errorMessage>
</ValidationRule>