sfSandBoxCode/force-app/main/default/objects/Occurrence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Injured_Employee__c</columns>
    <columns>Sanergy_Department__c</columns>
    <columns>Sanergy_Department_Unit__c</columns>
    <columns>Description__c</columns>
    <columns>Root_cause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>