sfSandBoxCode/force-app/main/default/objects/Occurrence__c/listViews/test_Occurrence_Reported_Occurrence.listView-meta.xml
<ListView>
    <fullName>test_Occurrence_Reported_Occurrence</fullName>
    <filterScope>Queue</filterScope>
    <label>test_Occurrence_Reported</label>
    <queue>test_Occurrence_Reported</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>